--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "my-vue-app",
-  "private": true,
+  "name": "crypto-finances",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
