--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "parcel 'src/pages/*.html'",
+    "build-github": "parcel build 'src/pages/*.html' --public-url /CryptoFinances",
+    "build": "parcel build 'src/pages/*.html'",
+    "preview": "npx serve dist",
     "commit": "cz"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.2",
     "commitizen": "^4.2.5",
+    "parcel": "^2.6.2",
     "postcss": "^8.4.14",
     "sass": "^1.53.0",
     "stylelint": "^14.9.1",
@@ -19,8 +22,7 @@
     "stylelint-config-standard": "^26.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-order": "^5.0.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "typescript": "^4.6.4"
   },
   "config": {
     "commitizen": {
